Se mejoraron los estilos en los botones

--- a/css/main.css
+++ b/css/main.css
@@ -134,6 +134,9 @@ main .main-buttons button {
 
 main .main-buttons button:hover {
     border: 1px solid #c6c6c6;
-    box-shadow: 0 1px 1px #000001;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
     color: #222;
+    background-color: #f8f8f8;
+    background-image: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
+    cursor: pointer
 }
